--- a/index.html
+++ b/index.html
@@ -43,15 +43,19 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>The VT Shaped Student</h1>
                     <img src="https://baconmockup.com/300/200" />
-                    <p>Virginia Tech............</p>
+                    <p>Introduction.......</p>
 
-                    <p>Writing and Digital Media.......</p>
+                    <p>About Me.........</p>
+
+                    <p>Remix.........</p>
+
+                    <p>Reflection......</p>
 
                 </div>
                 <footer>
                     <div class="container text-muted">
                         <hr/>
-                        <p>An experiment.</div>
+                        <p>....</div>
                 </footer>
             </div>
 
