--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><a href="video.html">Video</a></li>
                     </ul>
                 </div>
-                <div class="col-xs-12 col-sm-9">
+                <div>class="col-xs-12 col-sm-9">
                     <h1>The VT Shaped Student</h1>
                     <img src="https://baconmockup.com/300/200" />
                     <p>Introduction.......</p>
