--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>The VT Shaped Student</h1>
-                    <img src="https://baconmockup.com/300/200" />
+                    <img src="https://baconmockup.com/300/200https://" />
                     <p>Introduction.......</p>
 
                     <p>About Me.........</p>
