--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>The VT Shaped Student</h1>
-                    <img src="http://cdn1.sbnation.com/imported_assets/2070703/pf01y1obvhkhvipk13nv.png" />
+                    <img src="http://content.sportslogos.net/logos/35/901/thumbs/2jjt3aucn0twc1pt47qg.gif" />
                     <p>Introduction.......</p>
 
                     <p>About Me.........</p>
