--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <h1>The VT Shaped Student</h1>
                     <img src="http://content.sportslogos.net/logos/35/901/thumbs/2jjt3aucn0twc1pt47qg.gif" />
                     <p>Introduction.......</p>
+                    <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech.</p>
 
                     <p>About Me.........</p>
 
