--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>The VT Shaped Student</h1>
                     <img src="http://content.sportslogos.net/logos/35/901/thumbs/2jjt3aucn0twc1pt47qg.gif" />
-                    <p>Introduction.......</p>
+                    <h1><p>Introduction.......</p></h1>
                     <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech.</p>
 
                     <p>About Me.........</p>
