--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                     <h1>The VT Shaped Student</h1>
                     <img src="http://content.sportslogos.net/logos/35/901/thumbs/2jjt3aucn0twc1pt47qg.gif" />
                     <p>Introduction.......</p>
-                    <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major with a focus on Literature and Language and minoring in Spanish. Before this course, posting on Facebook and tweeting was pretty much the extent of my digital writing experience.</p>
-                    <p>I hope to have an understanding of basic HTML and CSS, and website creating and digital editing. Hopefully my strong foundation will give me the experience I need if I'm to apply those skills at a future job.</p>
+                    <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major with a focus on Literature and Language and minoring in Spanish. Before this course, posting on Facebook and tweeting was pretty much the extent of my digital writing experience. I hope to have an understanding of basic HTML and CSS, and website creating and digital editing. Hopefully my strong foundation will give me the experience I need if I'm to apply those skills at a future job.</p>
 
                     <p>About Me.........</p>
                     <p>
