--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
 
                     <p>Remix.........</p>
+                    <p>*put quotes here*
 
                     <p>Reflection......</p>
+                    <p>
 
                 </div>
                 <footer>
