--- a/audio.html
+++ b/audio.html
@@ -36,14 +36,14 @@
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li>Audio</li>
+                        <li>Interests</li>
                         <li><a href="video.html">Video</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Audio clip</h1>
+                    <h1>Interests</h1>
 
-                    <p>This is an audio clip of Sofia laughing when she was a baby.</p>
+                    <p>Here are my interests.</p>
 
                     <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/227959739&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
