--- a/audio.html
+++ b/audio.html
@@ -26,7 +26,7 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-                    <a class="navbar-brand" href="index.html">Bacon</a>
+                    <a class="navbar-brand" href="index.html">The VT Shaped Student</a>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li>Interests</li>
-                        <li><a href="video.html">Video</a></li>
+                        <li><a href="video.html">Remix</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
@@ -45,7 +45,7 @@
 
                     <p>Here are my interests.</p>
 
-                  
+
 
                 </div>
                 <footer>
