--- a/video.html
+++ b/video.html
@@ -26,7 +26,7 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-                    <a class="navbar-brand" href="index.html">Bacon</a>
+                    <a class="navbar-brand" href="index.html">The VT Shaped Student</a>
                 </div>
             </div>
         </div>
@@ -36,14 +36,14 @@
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="audio.html">Audio</a></li>
-                        <li>Video</li>
+                        <li><a href="audio.html">Interests</a></li>
+                        <li>Remix</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Video</h1>
+                    <h1>Remix</h1>
 
-                    <p>This is a video of Sofia dancing... probably in mid 2016.</p>
+                    <p>This is my remix.</p>
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/PcyUflwStHU" frameborder="0" allowfullscreen></iframe>
 
