--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul class="nav">
                         <li>Home</li>
                         <li><a href="interests.html">Interests</a></li>
-                        <li><a href="video.html">Video</a></li>
+                        <li><a href="remix.html">Remix</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
