--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
                         <li>Home</li>
-                        <li><a href="interests.html">Interests</a></li>
-                        <li><a href="remix.html">Remix</a></li>
+                        <li><a href="audio.html">Interests</a></li>
+                        <li><a href="video.html">Remix</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
