--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
 </head>
@@ -45,7 +45,7 @@
 
                     <p>This is my remix.</p>
 
-                  
+
 
                 </div>
                 <footer>
