--- a/reflection.html
+++ b/reflection.html
@@ -51,7 +51,7 @@
                 <footer>
                     <div class="container text-muted">
                         <hr/>
-                        <p>An experiment.</div>
+                        <p></div>
                 </footer>
             </div>
 
