--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <footer>
                     <div class="container text-muted">
                         <hr/>
-                        <p>....</div>
+                        <p></div>
                 </footer>
             </div>
 
