--- a/interests.html
+++ b/interests.html
@@ -37,8 +37,8 @@
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li>Interests</li>
-                        <li><a href="video.html">Remix</a></li>
-                      
+                        <li><a href="remix.html">Remix</a></li>
+
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
