--- a/interests.html
+++ b/interests.html
@@ -38,6 +38,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li>Interests</li>
                         <li><a href="remix.html">Remix</a></li>
+                        <li><a href="reflection.html">Reflection</a></li>
 
                     </ul>
                 </div>
