--- a/reflection.html
+++ b/reflection.html
@@ -36,7 +36,7 @@
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="interests.html">Interests</li>
+                        <li><a href="interests.html">Interests</a></li>
                         <li><a href="remix.html">Remix</a></li>
                         <li>Reflection</li>
                     </ul>
