--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-                    <a class="navbar-brand" href="index.html">VT Student</a>
+                    <a class="navbar-brand" href="index.html">The VT Shaped Student</a>
                 </div>
             </div>
         </div>
