--- a/remix.html
+++ b/remix.html
@@ -46,7 +46,8 @@
 
                     <p>This is my remix.</p>
 
-
+<ul>
+  <li>In all of these cases, Disney, or Disney, Inc.) ripped creativity from the culture around him, mixed that creativity with his own extraordinary talent, and then burned that mix into the soul of his culture. Rip, mix, and burn.</li>
 
                 </div>
                 <footer>
