--- a/remix.html
+++ b/remix.html
@@ -49,6 +49,16 @@
 <ul>
   <li>In all of these cases, Disney, or Disney, Inc.) ripped creativity from the culture around him, mixed that creativity with his own extraordinary talent, and then burned that mix into the soul of his culture. Rip, mix, and burn.</li>
 
+  <li>Thus, most of the content from the nineteenth century was free for Disney to use and build upon in 1928. It was free for anyone - whether connected or not, whether rich or not, whether approved or not - to use and build upon.</li>
+
+  <li>Develop cross-cutting technology curricula that allow the majority of our students to graduate with 21st century technology expertiese; become a national leader in X+T curricula.</li>
+
+  <li>Experiential learning wrapped around an issue, problem, or topic of the community will become the core of the educational experience, with the traditional course instruction supporting that work.</li>
+
+  <li>He has also asked us to consider the need for T-shaped learners because, "What important problem can be solved only by engineers who are trained only in engineering, or by poets who have mastered only poetry?"</li>
+
+  <li>Steve Jobs, who credited a class in calligraphy and typefaces for part of the human appeal of his computers, insisted that "technology alone is not enough - it's technology married with liberal arts, married with the humanities, that yields us the results that make our heart sing."</li>
+
                 </div>
                 <footer>
                     <div class="container text-muted">
