--- a/remix.html
+++ b/remix.html
@@ -59,6 +59,11 @@
 
   <li>Steve Jobs, who credited a class in calligraphy and typefaces for part of the human appeal of his computers, insisted that "technology alone is not enough - it's technology married with liberal arts, married with the humanities, that yields us the results that make our heart sing."</li>
 
+  <li>We want to prepare students who can tackle the complex global problems and opportunities of the future,” said President Tim Sands. “To do that, students need to be adaptable, resilient, and culturally competent, seeing the world through the lens of empathy...</li>
+
+  <li>Experiential learning wrapped around an issue, problem, or topic of the community will become the core of the educational experience, with the traditional course instruction supporting that work.</li>
+
+
                 </div>
                 <footer>
                     <div class="container text-muted">
