--- a/interests.html
+++ b/interests.html
@@ -47,6 +47,12 @@
 
                     <p>Here are my interests.</p>
 
+                    <p>I don't really think my interests intersect with digital writing. I like helping others and working with kids, and so that doesn't really have anything to do with digital writing. If I want to make working and helping kids a main focus in my career, then maybe something will come up where I need to use digital writing. Maybe I'll work with a certain program that would need me to work on a website for it, or keep people up to date on what the program is doing.</p>
+
+                    <p>But I like working with kids because I enjoy spending time with them. So I wouldn't want to get involved in something where I'm not directly interacting with the kids. So here my interest don't intersect with digital media.</p>
+
+                    <p>I think a VT shaped student should be well rounded. I think it's important for them to have a main focus that they are "experts" in, since they are going to school to study for a specific thing. But, it's important that they have (at least) a basic knowledge of a variety of other things. Like knowing enough about technology to enable them to work well in the 21st century. They also need to have the skills that employers are looking for, like good communication, critical thinking, the ability to work well with others, etc. In a time when it's becoming increasingly difficult for college graduates to get a job, it's important that students have a variety of skills that employers are looking for, even if it's not specific to their major.</p>
+
 
 
                 </div>
