--- a/reflection.html
+++ b/reflection.html
@@ -46,6 +46,10 @@
 
                     <p>Here is my reflection.</p>
 
+                    <p>The VT Shaped Student model is definitely an interesting way of looking at education. I think it’s important to have a wide array of skills, especially in this day and age where everything is connected. Also, as someone who isn’t sure of what they want to do in the future, it’s nice that there’s an emphasis on exploring other options and learning different things instead of having one main focus.</p>
+
+                    <p>It gives students a chance to discover new interests while still completing courses that are required for a degree. It’s also intriguing because I feel like for the most of my education, there has been a sense of urgency to quickly find one topic and make it the focus of one’s education. There wasn’t much encouragement to broaden one’s horizons. So I’m glad that educators are trying out the VT Shaped Student model so students can become well rounded and discover new passions.</p>
+
 
 
                 </div>
