--- a/reflection.html
+++ b/reflection.html
@@ -52,7 +52,7 @@
 
                     <p>I was surprised at how much I enjoyed working in HTML. Before this class, I thought digital writing was extremely complicated and only computer geniuses were able to create things using HTML. When we first started learning HTML, it seemed like a very daunting task, especially because I wouldn’t consider myself to be a computer genius. But, after learning the basics and slowly adding on to them, I realize it’s not that complicated. At least, not at my current level. It reminds me of solving for X in algebra. There are steps you must take in order to reach the end result. The steps all add on one another, so once you understand one step, the next step isn’t that difficult to learn. It's definitely something anyone can do, once you learn the basics.</p>
 
-                    <p>However, for me, my problem with HTML is remembering the steps. I’ll know how to start something, but I frequently get confused trying to remember what the next step is. I also need to remember which code to use for which thing, because a lot of times I know what I want to do but I’m not sure the exact code that will enable me to do it.</p>
+                    <p>However, for me, my problem with HTML is <em>remembering</em> the steps. I’ll know how to start something, but I frequently get confused trying to remember what the next step is. I also need to remember which code to use for which thing, because a lot of times I know what I want to do but I’m not sure the exact code that will enable me to do it.</p>
 
 
 
