--- a/interests.html
+++ b/interests.html
@@ -51,7 +51,9 @@
 
                     <p>But I like working with kids because I enjoy spending time with them. So I wouldn't want to get involved in something where I'm not directly interacting with the kids. So here my interest don't intersect with digital media.</p>
 
-                    <p>I think a VT shaped student should be well rounded. I think it's important for them to have a main focus that they are "experts" in, since they are going to school to study for a specific thing. But, it's important that they have (at least) a basic knowledge of a variety of other things. Like knowing enough about technology to enable them to work well in the 21st century. They also need to have the skills that employers are looking for, like good communication, critical thinking, the ability to work well with others, etc. In a time when it's becoming increasingly difficult for college graduates to get a job, it's important that students have a variety of skills that employers are looking for, even if it's not specific to their major.</p>
+                    <p>I think a VT shaped student should be well rounded. I think it's important for them to have a main focus that they are "experts" in, since they are going to school to study for a specific thing. But, it's important that they have (at least) a basic knowledge of a variety of other things. Like knowing enough about technology to enable them to work well in the 21st century. They also need to have the skills that employers are looking for, like good communication, critical thinking, the ability to work well with others, etc.</p>
+
+                    <p>In a time when it's becoming increasingly difficult for college graduates to get a job, it's important that students have a variety of skills that employers are looking for, even if it's not specific to their major.</p>
 
 
 
