--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
                     <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major with a focus on Literature and Language and minoring in Spanish.Before this course, posting on Facebook and tweeting was pretty much the extent of my digital writing experience.</p>
 
+                    <img src="snowcone.jpg" /> 
+
                     <p>I hope to have an understanding of basic HTML and CSS, and website creating and digital editing. Hopefully my strong foundation will give me the experience I need if I'm to apply those skills at a future job.</p>
 
                     <p>Although I'm an English major, I'm not sure what I want to do with it in the future. So far I'm enjoying the class, and I'm hoping that by the end of the semester I'll have a better idea of if I want to continue down the digital writing path and make it one of my focuses, or if I want to explore something else.</p>
