--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>The VT Shaped Student</h1>
+                    <h1>Remix Website</h1>
                     <img src="snowcone.jpg"/>
                     <h2>Introduction</h2>
 
