--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Remix Website</h1>
-                    <img src="kili.jpg"/>
+                    <img src="kili2.jpg"/>
                     <h2>Introduction</h2>
 
                     <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major with a focus on Literature and Language and minoring in Spanish.Before this course, posting on Facebook and tweeting was pretty much the extent of my digital writing experience.</p>
