--- a/interests.html
+++ b/interests.html
@@ -45,6 +45,9 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Interests</h1>
 
+                    <img src="hashtaghokies.jpg"/>
+
+
                     <p>Here are my interests.</p>
 
                     <p>I don't really think my interests intersect with digital writing. I like helping others and working with kids, and so that doesn't really have anything to do with digital writing. If I want to make working and helping kids a main focus in my career, then maybe something will come up where I need to use digital writing. Maybe I'll work with a certain program that would need me to work on a website for it, or keep people up to date on what the program is doing.</p>
