--- a/interests.html
+++ b/interests.html
@@ -52,6 +52,11 @@
 
                     <p>Here are my interests.</p>
 
+                    <p>At Virginia Tech, I love going to Hokie football and basketball games with my friends. I’m a member of the We Suck at Art Club, where I draw and paint and hang out with a lot of fun people. I’m also involved in the Spanish Club. I want to study abroad in Spain next year, so I’m hoping that going to the meetings will help me get better at speaking Spanish.</p>
+
+                    <p>I also volunteer with VT Engage with my friends. I really enjoy volunteering and it’s nice that there are so many people at Tech who feel the same way. My favorite part of VT Engage is when we go and work with kids at different schools. Over the summer I work at a preschool summer camp, so it’s nice to be able to work with kids here in Blacksburg because usually I’m surrounded by other college students.</p>
+
+
                     <p>I don't really think my interests intersect with digital writing. I like helping others and working with kids, and so that doesn't really have anything to do with digital writing. If I want to make working and helping kids a main focus in my career, then maybe something will come up where I need to use digital writing. Maybe I'll work with a certain program that would need me to work on a website for it, or keep people up to date on what the program is doing.</p>
 
                     <p>But I like working with kids because I enjoy spending time with them. So I wouldn't want to get involved in something where I'm not directly interacting with the kids. So here my interest don't intersect with digital media.</p>
