--- a/remix.html
+++ b/remix.html
@@ -62,9 +62,19 @@
 
   <li>Steve Jobs, who credited a class in calligraphy and typefaces for part of the human appeal of his computers, insisted that "technology alone is not enough - it's technology married with liberal arts, married with the humanities, that yields us the results that make our heart sing."</li>
 
-  <li>We want to prepare students who can tackle the complex global problems and opportunities of the future,” said President Tim Sands. “To do that, students need to be adaptable, resilient, and culturally competent, seeing the world through the lens of empathy...</li>
+  <li>We want to prepare students who can tackle the complex global problems and opportunities of the future,” said President Tim Sands. “To do that, students need to be adaptable, resilient, and culturally competent, seeing the world through the lens of empathy..."</li>
 
-  <li>Experiential learning wrapped around an issue, problem, or topic of the community will become the core of the educational experience, with the traditional course instruction supporting that work.</li>
+  <li>The challenges of the future require the capacity to work in interdisciplinary teams, engage in critical and creative thinking, collaborate with diverse people, communicate effectively, and conduct oneself with a deep sense of ethics.</li>
+
+  <li>Free cultures are cultures that leave a great deal open for others to
+build upon; unfree, or permission, cultures leave much less. Ours was a
+free culture. It is becoming much less so.</li>
+
+<li>The capital T is the cross between a student’s disciplinary depth and transdisciplinary knowledge and technological experience. The V connects those traits through informal communal and guided experiential learning.</li>
+
+  <li>To create these kinds of learners, it may be useful to remember that, alongside invention, we need to find both inspiration and imagination.</li>
+
+  <li>
 
 
                 </div>
