--- a/reflection.html
+++ b/reflection.html
@@ -44,6 +44,10 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Reflection</h1>
 
+                    <p></P>
+
+                      <img src="hmmm.jpg" />
+
 
                     <p>The VT Shaped Student model is definitely an interesting way of looking at education. I think it’s important to have a wide array of skills, especially in this day and age where everything is connected. Also, as someone who isn’t sure of what they want to do in the future, it’s nice that there’s an emphasis on exploring other options and learning different things instead of having one main focus.</p>
 
