--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <p>Before this class, posting on Facebook and tweeting was pretty much the extent of my digital writing experience. I hope to have an understanding of basic HTML and CSS, and website creating and digital editing. Hopefully my strong foundation will give me the experience I need if I'm to apply those skills at a future job.</p>
 
-                    <p>So far I'm enjoying the class, and I'm hoping that by the end of the semester I'll have a better idea of if I want to continue down the digital writing path and make it one of my focuses, or if I want to explore something else.</p>
+                    <p>So far I'm enjoying Writing and Digital Media. I'm hoping that by the end of the semester I'll have a better idea of if I want to continue down the digital writing path and make it one of my focuses, or if I want to explore something else.</p>
 
                 </div>
                 <footer>
