--- a/interests.html
+++ b/interests.html
@@ -50,9 +50,9 @@
                     <p></p>
 
 
-                  
 
-                    <p>At Virginia Tech, I love going to Hokie football and basketball games with my friends. I’m a member of the We Suck at Art Club, where I draw and paint and hang out with a lot of fun people. I’m also involved in the Spanish Club. I want to study abroad in Spain next year, so I’m hoping that going to the meetings will help me get better at speaking Spanish.</p>
+
+                    <p>I love going to Hokie football and basketball games with my friends. I’m a member of the We Suck at Art Club, where I draw and paint and hang out with a lot of fun people. I’m also involved in the Spanish Club. I want to study abroad in Spain next year, so I’m hoping that going to the meetings will help me get better at speaking Spanish.</p>
 
                     <p>I also volunteer with VT Engage with my friends. I really enjoy volunteering and it’s nice that there are so many people at Tech who feel the same way. My favorite part of VT Engage is when we go and work with kids at different schools. Over the summer I work at a preschool summer camp, so it’s nice to be able to work with kids here in Blacksburg because usually I’m surrounded by other college students.</p>
 
