--- a/remix.html
+++ b/remix.html
@@ -46,7 +46,7 @@
 
                     <p></p>
 
-                    <img src="vt.jpg" />
+                    <img src="remixx.jpg" />
                     <p></P>
 
 <ul>
