--- a/interests.html
+++ b/interests.html
@@ -45,7 +45,7 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Interests</h1>
 
-                    <img src="hashtaghokies.jpg"/>
+                    <img src="likeit.jpg"/>
 
                     <p></p>
 
