--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="snowcone.jpg"/>
                     <h2>Introduction</h2>
 
-                    <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major, specifically Literature and Language. I'm also minoring in Spanish. However, I'm not sure what I want to do with those in the future.</p>
+                    <p>My name is Alicia Messenger and I am a sophomore at Virginia Tech. I'm an English major, specifically Literature and Language. I'm also minoring in Spanish. I took a Gap Year after high school and traveled around the world. I don't know what I want to do career wise in the future, but I know I want to travel as much as I can. I'm also a huge fan of memes.</p>
 
                     <p>Before this class, posting on Facebook and tweeting was pretty much the extent of my digital writing experience. I hope to have an understanding of basic HTML and CSS, and website creating and digital editing. Hopefully my strong foundation will give me the experience I need if I'm to apply those skills at a future job.</p>
 
