--- a/remix.html
+++ b/remix.html
@@ -96,7 +96,9 @@ free culture. It is becoming much less so.</li>
 
 <p></p>
 
-  <li>
+  <li>Universities multiply, schools of every grade and type increase, but they do not enlarge their scope to anything like the urgent demands of this troubled and dangerous age.</li>
+
+
 
 
                 </div>
