--- a/remix.html
+++ b/remix.html
@@ -50,7 +50,43 @@
                     <p></P>
 
 <ul>
-  <li>In all of these cases, Disney, or Disney, Inc.) ripped creativity from the culture around him, mixed that creativity with his own extraordinary talent, and then burned that mix into the soul of his culture. Rip, mix, and burn.</li>
+  <li>Universities multiply, schools of every grade and type increase, but they do not enlarge their scope to anything like the urgent demands of this troubled and dangerous age.</li>
+
+<p></P>
+
+  <li>The challenges of the future require the capacity to work in interdisciplinary teams, engage in critical and creative thinking, collaborate with diverse people, communicate effectively, and conduct oneself with a deep sense of ethics.</li>
+
+  <p></p>
+
+<li>The capital T is the cross between a student’s disciplinary depth and transdisciplinary knowledge and technological experience. The V connects those traits through informal communal and guided experiential learning.</li>
+
+<p></p>
+
+<li>Experiential learning wrapped around an issue, problem, or topic of the community will become the core of the educational experience, with the traditional course instruction supporting that work.</li>
+
+<p></p>
+
+<li>Develop cross-cutting technology curricula that allow the majority of our students to graduate with 21st century technology expertiese; become a national leader in X+T curricula.</li>
+
+<p></p>
+
+<li>To create these kinds of learners, it may be useful to remember that, alongside invention, we need to find both inspiration and imagination.</li>
+
+<p></p>
+
+<li>Steve Jobs, who credited a class in calligraphy and typefaces for part of the human appeal of his computers, insisted that "technology alone is not enough - it's technology married with liberal arts, married with the humanities, that yields us the results that make our heart sing."</li>
+
+<p></p>
+
+  <li>In all of these cases, (Disney, or Disney, Inc.) ripped creativity from the culture around him, mixed that creativity with his own extraordinary talent, and then burned that mix into the soul of his culture. Rip, mix, and burn.</li>
+
+<p></p>
+
+<li>He has also asked us to consider the need for T-shaped learners because, "What important problem can be solved only by engineers who are trained only in engineering, or by poets who have mastered only poetry?"</li>
+
+<p></p>
+
+<li>We want to prepare students who can tackle the complex global problems and opportunities of the future,” said President Tim Sands. “To do that, students need to be adaptable, resilient, and culturally competent, seeing the world through the lens of empathy."</li>
 
 <p></p>
 
@@ -58,45 +94,7 @@
 
 <p></p>
 
-  <li>Develop cross-cutting technology curricula that allow the majority of our students to graduate with 21st century technology expertiese; become a national leader in X+T curricula.</li>
-
-<p></p>
-
-  <li>Experiential learning wrapped around an issue, problem, or topic of the community will become the core of the educational experience, with the traditional course instruction supporting that work.</li>
-
-<p></p>
-
-  <li>He has also asked us to consider the need for T-shaped learners because, "What important problem can be solved only by engineers who are trained only in engineering, or by poets who have mastered only poetry?"</li>
-
-<p></p>
-
-  <li>Steve Jobs, who credited a class in calligraphy and typefaces for part of the human appeal of his computers, insisted that "technology alone is not enough - it's technology married with liberal arts, married with the humanities, that yields us the results that make our heart sing."</li>
-
-<p></p>
-
-  <li>We want to prepare students who can tackle the complex global problems and opportunities of the future,” said President Tim Sands. “To do that, students need to be adaptable, resilient, and culturally competent, seeing the world through the lens of empathy..."</li>
-
-<p></p>
-
-  <li>The challenges of the future require the capacity to work in interdisciplinary teams, engage in critical and creative thinking, collaborate with diverse people, communicate effectively, and conduct oneself with a deep sense of ethics.</li>
-
-<p></p>
-
-  <li>Free cultures are cultures that leave a great deal open for others to
-build upon; unfree, or permission, cultures leave much less. Ours was a
-free culture. It is becoming much less so.</li>
-
-<p></p>
-
-<li>The capital T is the cross between a student’s disciplinary depth and transdisciplinary knowledge and technological experience. The V connects those traits through informal communal and guided experiential learning.</li>
-
-<p></p>
-
-  <li>To create these kinds of learners, it may be useful to remember that, alongside invention, we need to find both inspiration and imagination.</li>
-
-<p></p>
-
-  <li>Universities multiply, schools of every grade and type increase, but they do not enlarge their scope to anything like the urgent demands of this troubled and dangerous age.</li>
+  <li>Free cultures are cultures that leave a great deal open for others to build upon; unfree, or permission, cultures leave much less. Ours was a free culture. It is becoming much less so.</p>
 
 
 
