--- a/remix.html
+++ b/remix.html
@@ -94,7 +94,11 @@
 
 <p></p>
 
-  <li>Free cultures are cultures that leave a great deal open for others to build upon; unfree, or permission, cultures leave much less. Ours was a free culture. It is becoming much less so.</p>
+  <li>Free cultures are cultures that leave a great deal open for others to build upon; unfree, or permission, cultures leave much less. Ours was a free culture. It is becoming much less so.</li>
+
+</ul>
+
+
 
 
 
