--- a/remix.html
+++ b/remix.html
@@ -98,6 +98,12 @@
 
 </ul>
 
+<p>I think, for the most part, Rip, Mix, Burn really shows what digital composing is like today. People draw inspiration from al around them, from creators doing different things. I think it’s basic human nature to use things made by others to create something yourself. You borrow things you like from others, add your own flare to it, and create something new.</p>
+
+<p>The problem is, with all the restrictions starting to pop up everywhere, it’s becoming harder for creators to borrow content from others to make something new.</p>
+
+<p>Since VT Shaped Students are supposed to be well rounded and able to take different parts that one might not think would work together, and make them into a cohesive whole, that is essentially what Rip, Mix, Burn is.</p>
+
 
 
 
