--- a/remix.html
+++ b/remix.html
@@ -104,7 +104,7 @@
 
 <p>The problem is, with all the restrictions starting to pop up everywhere, it’s becoming harder for creators to borrow content from others to make something new.</p>
 
-<p>Since VT Shaped Students are supposed to be well rounded and able to take different parts that one might not think would work together, and make them into a cohesive whole, that is essentially what Rip, Mix, Burn is.</p>
+<p>VT Shaped Students are supposed to be well rounded. They're supposed to be able to take different parts that people might not think work together and make them into a cohesive whole. This is essentially what Rip, Mix, Burn is.</p>
 
 
 
